[project]
name = "spec-executor"
version = "0.1.0"
description = "Takes a spec, generates an implementation via Claude, runs tests, and iterates until they pass."
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "click",
    "rich",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
spec = "spec:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec"]
